Hangman Game New Version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
 
 body {
-  background: url('http://www.writteninpencil.de/Projekte/Hangman/hangman-bg.png') fixed;
   text-align: center;
   font-family: Helvetica, sans-serif;
+}
+
+.container {
+  background: url("hangman.png");
 }
 input {
   border: 2px solid #999;
